deploy/k8s/21-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: latex-api-service
  namespace: latex-app
spec:
  type: ClusterIP
  selector:
    app: latex-api
  ports:
    - port: 80
      targetPort: 8000
